force-app/main/default/objects/Maintenance_Request__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <description>Approved by appropriate management figure if necessary</description>
    <label>Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>No Approval Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>