force-app/main/default/objects/Maintenance_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the maintenance task required.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>