force-app/main/default/objects/Maintenance_Request__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Give a reasonable estimate of the cost, including labor, to complete this request.</description>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>