force-app/main/default/objects/Maintenance_Request__c/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the job been completed by the assigned vendor?</description>
    <label>Job Completed</label>
    <type>Checkbox</type>
</CustomField>