force-app/main/default/objects/Maintenance_Request__c/fields/Job_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Job_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the job been awarded to a vendor and a service date scheduled?</description>
    <label>Job Scheduled</label>
    <type>Checkbox</type>
</CustomField>