force-app/main/default/objects/Maintenance_Request__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <description>General type of maintenance required (HVAC, roofing, etc)</description>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Electrical Work</fullName>
            </value>
            <value>
                <fullName>Exterior Work</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>