force-app/main/default/objects/Maintenance_Request__c/fields/Preferred_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Service__c</fullName>
    <label>Preferred Date of Service</label>
    <type>Date</type>
</CustomField>