force-app/main/default/objects/Maintenance_Request__c/fields/Vendor_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Email Sent</label>
    <type>Checkbox</type>
</CustomField>