force-app/main/default/objects/Maintenance_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Preferred_Date_of_Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>