force-app/main/default/objects/Maintenance_Request__c/listViews/New_Requests.listView-meta.xml
<ListView>
    <fullName>New_Requests</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Preferred_Date_of_Service__c</columns>
    <filterScope>Mine</filterScope>
    <label>New Requests</label>
</ListView>